                          WebAuth Change History

WebAuth 3.1.0 (in progress)

 *) Modify WebAuthKeytab and WebKdcKeytab directives so 
    you can optionally specify which principal to use with
    the specified keytab, instead of using the first principal found.
    This required modifying webauth_krb5_* APIs.
 
 *) implement WebAuthProxyHeaders directive. See WebAuth module
    documentation for more information.

 *) clean up header includes in tests and wa_keyring

 *) mod_{webauth,webkdc}.h - "module" declaration should be extern

 *) Remove the service token cache in mod_webauth on restarts.

 *) Restructured the mod_webauth code to define a pluggable credential
    interface, isolating all credential-related functions so that new
    credential types can easily be supported.

WebAuth 3.0.0 (2003-02-18)

 *) Initial public release.