@@ -117,6 +117,16 @@
     WebAuthLastUseUpdateInterval 5s
 </Location>
 
+# test for no query params after initial redirect
+
+<Location /tests/auth/test11>
+    WebAuthReturnURL /tests/auth/test11return
+</Location>
+
+<Location /tests/auth/test11return>
+   # nothing
+</Location>
+
 ##################
 
 <Location /tests/auth/logout>
