@@ -23,6 +23,8 @@
 
 <LI><b><a href="auth/test10">test inactive-expire</a></b>
 
+<LI><b><a href="auth/test11">test for no query params on initial redirect</a></b>
+
 <LI><b><a href="php/test1.php">test PHP (only works if PHP installed)</a></b>
 
 </OL>
